Вроде завершил тесты, оптимизировал сервис для работы с Long по Id, но не Ad целиком